--- a/css/media.css
+++ b/css/media.css
@@ -106,25 +106,55 @@
 
     .mian_slider.main_slide1_more .slide_1 .more_about_block{
         top: 20%;
+        min-height: 40%;
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content {
         overflow-y: auto;
-        max-width: 90%;
+        padding: 0px 15px 15px 15px;
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_text{
         font-size: 20px;
     }
-
+    /*slide 3 start*/
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content{
         max-width: 70%;
         overflow-y: auto;
+        max-height: 540px;
     }
+    .mian_slider ._slide.slide_3 .more_about_block .about_content .about_content_text{
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .mian_slider ._slide.slide_3 .more_about_block .about_content .about_content_title{
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+
+    /*slide 3 end*/
     .mian_slider ._slide.slide_4 .more_about_block .about_content{
-        max-width: 75%;
+        max-width: 80%;
         overflow-y: auto;
     }
+    .mian_slider ._slide.slide_4 .more_about_block .about_content .about_content_title{
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .mian_slider ._slide.slide_4 .more_about_block .about_content .about_content_text{
+        font-size: 14px;
+        line-height: 24px;
+    }
     /* main slider block end */
-    
+
+    /* slide 2 start*/
+    .mian_slider.main_slide2_more ._slide.slide_2 .more_about_block{
+        max-width: 525px;
+    }
+    .mian_slider ._slide.slide_2 .more_about_block .about_content {
+        max-width: 75%;
+    }
+        /* slide 2 end*/
+
    
 
     
@@ -146,6 +176,7 @@
     /* main slider block start */
     ._slide .content_block {
         max-width: 350px;
+
     }
     ._slide .content_block.content_block3{
         left: 30%;
@@ -162,29 +193,26 @@
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content {
         top: 0%;
-        min-height: 240px;
+        min-height: 400px;
         height: 250px;
         padding: 5px 5px 5px 5px;
-        max-width: 65%;
        
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_text{
         font-size: 14px;
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
-        margin-bottom: 15px;
+        font-size: 20px;
+        margin-bottom: 10px;
     }
-    .mian_slider.main_slide2_more .slide_2 .more_about_block .about_content{
+    .mian_slider.main_slide2_more ._slide.slide_2 .more_about_block .about_content{
         padding: 5px 5px 5px 5px;
-        overflow-y: auto;
-        min-height: 240px;
-        height: 250px;
         margin: 0;
-        left: 18%
+        left: 24%;
+        top: 150px;
     }
     .mian_slider ._slide.slide_2 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
+        font-size: 28px;
         margin-bottom:15px ;
     }
     .mian_slider ._slide.slide_2 .more_about_block .about_content .about_content_text{
@@ -196,35 +224,32 @@
     }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content {
         padding: 15px 15px 15px 15px;
-        min-height: 240px;
-        height: 250px;
+        left: 15%;
+        max-width: 90%;
         top: 2% !important;
-        left: 0;
     }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
+        font-size: 17px;
+        line-height: 28px;
         margin-bottom:15px 
     }
-    .mian_slider.main_slide4_more .slide_4 .more_about_block{
-        top: 34%;
-        
-    }
+    /*.mian_slider.main_slide4_more .slide_4 .more_about_block{*/
+    /*    top: 34%;*/
+    /*    */
+    /*}*/
     .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content{
-        padding: 15px 15px 15px 15px;
-        min-height: 160px;
-        height: 170px;
-        top: -30px !important;
-        max-width: 90%;
+        max-width: 85%;
+        top: -75px;
 
     }
-    .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
-        margin-bottom:15px 
-    }
+    /*.mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_title{*/
+    /*    font-size: 34px;*/
+    /*    margin-bottom:15px */
+    /*}*/
 
-    .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_text{
-        font-size: 14px;
-    }
+    /*.mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_text{*/
+    /*    font-size: 14px;*/
+    /*}*/
      /* main slider block end */
     
     /* slide pagination start */
@@ -293,10 +318,7 @@
         top: 0;
 
     }
-    .mian_slider.main_slide2_more ._slide.slide_2 .more_about_block{
-        max-width: 100%;
 
-    }
 
     .mian_slider.main_slide2_more .slide_2 .more_about_block .about_content{
         max-width: 80%;
@@ -349,7 +371,7 @@
         left: 20%;
     }
     ._slide .content_block {
-        max-width: 220px;
+        max-width: 315px;
     }
     ._slide .content_block .content-title{
         font-size: 20px;
@@ -363,64 +385,67 @@
         width: 100%
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content {
-        top: 10%;
-        min-height: 240px;
-        height: 250px;
         padding: 5px 5px 5px 5px;
-        max-width: 65%;
+        max-width: 400px;
+        min-height: 550px;
        
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_text{
         font-size: 14px;
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
+        line-height: 30px;
         margin-bottom: 15px;
     }
-    .mian_slider.main_slide2_more .slide_2 .more_about_block .about_content{
+    .mian_slider.main_slide2_more ._slide.slide_2 .more_about_block .about_content{
         padding: 5px 5px 5px 5px;
-        min-height: 240px;
-        height: 250px;
         margin: 0;
-        left: 18%
+        left: 15%;
+        max-width: 80%;
     }
-    .mian_slider ._slide.slide_2 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
-        margin-bottom:15px ;
+    .mian_slider.main_slide2_more ._slide.slide_2 .more_about_block{
+        max-width: 100%;
     }
     .mian_slider ._slide.slide_2 .more_about_block .about_content .about_content_text{
         font-size: 14px;
     }
-
+    .mian_slider ._slide.slide_3 .more_about_block{
+        height: initial;
+        min-height: 100%;
+        max-width: 100%;
+        top: 0;
+        bottom: 0;
+    }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content .about_content_text{
         font-size: 14px;
     }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content {
         padding: 15px 15px 15px 15px;
-        min-height: 240px;
-        height: 250px;
-        top: 2% !important;
-        left: 0;
+        left: 30px;
+        top: 50% !important;
+        transform: translateY(-70%);
     }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
-        margin-bottom:15px 
+        font-size: 17px;
+        line-height: 28px;
+        margin-bottom:15px
     }
     .mian_slider.main_slide4_more .slide_4 .more_about_block{
-        top: 34%;
+        top: 0;
         
     }
     .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content{
-        padding: 15px 15px 15px 15px;
-        min-height: 160px;
-        height: 170px;
-        top: -30px !important;
+        padding: 15px;
+        min-height: 100%;
+        height: 100%;
+        bottom: -50%;
         max-width: 90%;
+        transform: translateY(30%);
 
     }
     .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_title{
-        font-size: 34px;
-        margin-bottom:15px 
+        font-size: 28px;
+        line-height: 38px;
     }
 
     .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_text{
@@ -442,33 +467,59 @@
 }
 
 @media(max-width:480px) {
+    .mian_slider ._slide.slide_1 .more_about_block .about_content{
+        max-width: 235px;
+        left: 10px;
+        top: 6%;
+    }
+    ._slide .content_block {
+        max-width: 240px;
+    }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_text{
         font-size: 12px;
+        line-height: 24px;
     }
     .mian_slider ._slide.slide_1 .more_about_block .about_content .about_content_title{
-        font-size: 20px;
+        font-size: 17px;
+        line-height: 24px;
         margin-bottom: 10px;
     }
     .mian_slider ._slide.slide_2 .more_about_block .about_content .about_content_title{
-        font-size: 20px;
-        margin-bottom:10px ;
+        font-size: 17px;
+        line-height: 24px;
+        margin-bottom: 10px;
     }
+    .mian_slider.main_slide2_more ._slide.slide_2 .more_about_block .about_content{
+        left: 10%;
+        top: 10%;
+        max-width: 90%;
+    }
+
+
     .mian_slider ._slide.slide_2 .more_about_block .about_content .about_content_text{
         font-size: 12px;
+        line-height: 24px;
     }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content .about_content_text{
         font-size: 12px;
+        line-height: 23px;
     }
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content {
         padding: 0px 0px 0px 5px;
+        max-width: 95%;
+        left: 15px;
     } 
     .mian_slider.main_slide3_more .slide_3 .more_about_block .about_content .about_content_title{
-        font-size: 20px;
+        font-size: 19px;
         margin-bottom:10px 
     }
+    .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content{
+        transform: translateY(20%);
+    }
     .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_title{
-        font-size: 20px;
-        margin-bottom:10px 
+        font-size: 18px;
+        line-height: 26px;
+
     }
     .mian_slider.main_slide4_more .slide_4 .more_about_block .about_content .about_content_text{
         font-size: 12px;
