--- a/css/media.css
+++ b/css/media.css
@@ -281,6 +281,7 @@
         padding-top: 55px;
     }
     .contact_us_main .contact_form{
+        width: 100%;
         top: 10px;
         padding: 0px 20px 15px;
     }
@@ -291,6 +292,12 @@
     .contact_form .textarea_block{
         margin: 10px auto 0;
         max-width: 95%;
+    }
+    div.location_block{
+        padding-top: 100px;
+    }
+    .location_block div.nav_tab_block{
+        width: 100%;
     }
     .location_block .armenian_office .contact_block{
         flex-direction: row;
@@ -524,6 +531,13 @@
         right: -50px !important;
     }
 
+    /*about us page css start*/
+    div.about_us_main_content{
+        margin-top: 80px;
+    }
+    .about_us_main_content img{
+        width: 100%;
+    }
 }
 
 @media(max-width:480px) {
@@ -638,6 +652,14 @@
         padding: 7px 0 8px;
         font-size: 13px;
         width: 95px;
+    }
+
+    /*about us page css start*/
+    .about_us_main_content .team_content p{
+        font-size: 14px;
+    }
+    .about_us_main_content div.row{
+        margin-top: 40px;
     }
 
 }
